[package]
name = "rust_cluedo"
version = "0.1.0"
authors = ["James <jameshendry05@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.8.0", features = ["small_rng"]}

[dev-dependencies]
criterion = "0.3"

[profile.release]
debug = true

[[bench]]
name = "note_tracker_bench"
harness = false